--- a/tutorial1/checkpoint1.ipynb
+++ b/tutorial1/checkpoint1.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checkpoint 1"
+    "Reminder: \n",
+    "\n",
+    "- You are being evaluated for completion and effort in this checkpoint. \n",
+    "- Avoid manual labor / hard coding as much as possible, everything we've taught you so far are meant to simplify and automate your process."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reminder: \n",
-    "\n",
-    "- You are being evaluated for completion and effort in this checkpoint. \n",
-    "- Avoid manual labor / hard coding as much as possible, everything we've taught you so far are meant to simplify and automate your process."
+    "# Checkpoint 1"
    ]
   },
   {
@@ -56,7 +56,11 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as numpy\n",
+    "import pandas as pd \n",
+    "import matplotlib as mlib"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +74,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datas = pd.read_csv(\"../data/states_edu.csv\")\n",
+    "datas.head(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,7 +98,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datas.dropna(subset=['AVG_MATH_4_SCORE'], inplace=True)\n",
+    "datas.notna().sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,7 +129,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "max(datas[\"YEAR\"]) - min(datas[\"YEAR\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,7 +145,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_states = datas.groupby(\"STATE\")\n",
+    "data_states[\"AVG_MATH_4_SCORE\"].mean()\n",
+    "\n",
+    "michigan_score = datas.loc[datas['State'] == 'MICHIGAN', \"AVG_MATH_4_SCORE\"].values[0]\n",
+    "ohio_score = datas.loc[datas['State'] == 'OHIO', \"AVG_MATH_4_SCORE\"].values[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,7 +165,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "years = datas[daatas[\"YEAR\"] == 2019]\n",
+    "avg_score = years[\"AVG_MATH_4_SCORE\"].mean()\n",
+    "avg_score"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,7 +183,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "max_test = datas.groupby(\"STATE\")\n",
+    "max_test[\"AVG_MATH_4_SCORE\"].max()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -188,7 +213,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datas[\"money_per_student\"] = datas[\"TOTAL_EXPENDITURE\"] / datas[\"ENROLL\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,7 +240,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datas.plot.scatter(x= 'INSTRUCTION_EXPENDITURE', y = 'AVG_MATH_4_SCORE', alpha = 0.6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -234,7 +263,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datas.plot.scatter(x= 'ENROLL', y = 'AVG_MATH_4_SCORE', alpha = 0.6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,8 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X =\n",
-    "# y = "
+    "X = datas[['ENROLL_4', 'AVERAGE_MATH_4_SCORE', 'AVG_READING_4_SCORE']].dropna()\n",
+    "y = datas.loc[X.index]['AVG_READING_4_SCORE']"
    ]
   },
   {
@@ -277,8 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_train, X_test, y_train, y_test = train_test_split(\n",
-    "#      X, y, test_size=, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3, random_state=0)"
    ]
   },
   {
@@ -301,7 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import your sklearn class here"
+    "# import your sklearn class here\n",
+    "from sklearn.linear.model import LinearRegression"
    ]
   },
   {
@@ -311,7 +342,7 @@
    "outputs": [],
    "source": [
     "# create your model here\n",
-    "# model = "
+    "model = LinearRegression()"
    ]
   },
   {
@@ -351,7 +382,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.score(X_test, y_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -368,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# col_name = 'COLUMN NAME OF ONE PREDICTOR'\n",
+    "col_name = 'AVERAGE MATH SCORE FOR FOURTH GRADE'\n",
     "\n",
     "# f = plt.figure(figsize=(12,6))\n",
     "# plt.scatter(X_train[col_name], y_train, color = \"red\")\n",
@@ -376,7 +409,7 @@
     "\n",
     "# plt.legend(['True Training','Predicted Training'])\n",
     "# plt.xlabel(col_name)\n",
-    "# plt.ylabel('NAME OF THE PREDICTOR')\n",
+    "plt.ylabel('READING 4 SCORE')\n",
     "# plt.title(\"Model Behavior On Training Set\")"
    ]
   },
@@ -386,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# col_name = 'COLUMN NAME OF ONE PREDICTOR\"\n",
+    "col_name = 'AVG MATH 4 SCORE\"\n",
     "\n",
     "# f = plt.figure(figsize=(12,6))\n",
     "# plt.scatter(X_test[col_name], y_test, color = \"blue\")\n",
@@ -394,7 +427,7 @@
     "\n",
     "# plt.legend(['True testing','Predicted testing'])\n",
     "# plt.xlabel(col_name)\n",
-    "# plt.ylabel('NAME OF THE PREDICTOR')\n",
+    "plt.ylabel('Total expenditure')\n",
     "# plt.title(\"Model Behavior on Testing Set\")"
    ]
   }
