--- a/tutorial0/checkpoint0.ipynb
+++ b/tutorial0/checkpoint0.ipynb
@@ -40,7 +40,8 @@
    "outputs": [],
    "source": [
     "# get a list containing the last 3 elements of a\n",
-    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python"
+    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python\n",
+    "a[-3:]"
    ]
   },
   {
@@ -50,7 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a list of numbers from 1 to 20"
+    "# create a list of numbers from 1 to 20\n",
+    "c = list(range(1,21))\n",
+    "c"
    ]
   },
   {
@@ -61,7 +64,9 @@
    "outputs": [],
    "source": [
     "# now get a list with only the even numbers between 1 and 100\n",
-    "# you may or may not make use of the list you made in the last cell"
+    "# you may or may not make use of the list you made in the last cell\n",
+    "c = list(range(0,101,2))\n",
+    "c"
    ]
   },
   {
@@ -72,7 +77,9 @@
    "outputs": [],
    "source": [
     "# write a function that takes two numbers as arguments\n",
-    "# and returns the first number divided by the second"
+    "# and returns the first number divided by the second\n",
+    "def divide(x,y) :\n",
+    "    return x / y"
    ]
   },
   {
@@ -88,7 +95,16 @@
     "# if the number is a multiple of 3, print fizz\n",
     "# if the number is a multiple of 5, print buzz\n",
     "# if the number is a multiple of 3 and 5, print fizzbuzz and NOTHING ELSE\n",
-    "# if the number is neither a multiple of 3 nor a multiple of 5, print the number"
+    "# if the number is neither a multiple of 3 nor a multiple of 5, print the number\n",
+    "for i in range (1,31):\n",
+    "    if(i % 15 == 0):\n",
+    "        print(\"fizzbuzz\")\n",
+    "    elif(1 % 3 == 0):\n",
+    "        print(\"fizz\")\n",
+    "    elif(1 % 5 == 0):\n",
+    "        print(\"buzz\")\n",
+    "    else:\n",
+    "        print(i)"
    ]
   },
   {
@@ -102,7 +118,9 @@
     "# Gyro: $9 \n",
     "# Burger: $9\n",
     "# Greek Salad: $8\n",
-    "# Philly Steak: $10"
+    "# Philly Steak: $10\n",
+    "menu = {\"Gyro\":\"$9\", \"Burger\":\"$9\", \"Greek Salad\":\"$8\", \"Philly Steak\":\"$10\" }\n",
+    "menu = [\"Gyro\"]"
    ]
   },
   {
@@ -116,7 +134,9 @@
    "outputs": [],
    "source": [
     "# load in the \"starbucks.csv\" dataset\n",
-    "# refer to how we read the cereal.csv dataset in the tutorial\n"
+    "# refer to how we read the cereal.csv dataset in the tutorial\n",
+    "import pandas as pd \n",
+    "dg = pd.read_csv(\"../data/starbucks.csv\")"
    ]
   },
   {
@@ -126,7 +146,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select all rows with more than and including 400 calories"
+    "# select all rows with more than and including 400 calories\n",
+    "dg[dg[\"calories\"]>= 400]"
    ]
   },
   {
@@ -136,7 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select all rows whose vitamin c content is higher than the iron content"
+    "# select all rows whose vitamin c content is higher than the iron content\n",
+    "dg[dg[\"vitamin c\"] > dg[\"iron\"]]"
    ]
   },
   {
@@ -146,7 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a new column containing the caffeine per calories of each drink"
+    "# create a new column containing the caffeine per calories of each drink\n",
+    "dg[\"caffeine_per_cals\"] = dg[\"caffeine\"] / dg[\"calories\"]\n"
    ]
   },
   {
@@ -159,7 +182,8 @@
    },
    "outputs": [],
    "source": [
-    "# what is the average calorie across all items?\n"
+    "# what is the average calorie across all items?\n",
+    "cal_avg = dg[\"calories\"].mean()"
    ]
   },
   {
@@ -172,7 +196,8 @@
    },
    "outputs": [],
    "source": [
-    "# how many different categories of beverages are there?\n"
+    "# how many different categories of beverages are there?\n",
+    "count = dg[\"beverage_category\"].nunique()"
    ]
   },
   {
@@ -185,7 +210,9 @@
    },
    "outputs": [],
    "source": [
-    "# what is the average # calories for each beverage category?\n"
+    "# what is the average # calories for each beverage category?\n",
+    "cals = dg.groupby(\"beverage_category\")\n",
+    "cals[\"calories\"].mean()"
    ]
   }
  ],
